--- a/css/main.css
+++ b/css/main.css
@@ -27,17 +27,18 @@ width: 30%;
 .main_1_2 a{
     /* margin-top:40px ; */
     padding: 10px;
-    border: 1px solid black;
+    border-bottom: 1px solid white;
     
-    background-color: white;
-    color: black;
+    /* background-color: white; */
+    color: white;
     text-decoration: none;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    transition: all 0.5s ease;
 }
 .main_1_2 a:hover{
-    background-color: black;
-    color: white;
-    border: 1px solid white;
+    /* background-color: black; */
+    color: red;
+    /* border: 1px solid white; */
 }
 /*------------------------------------------------------------------------------------------------------------*/
 .main_2{
@@ -117,10 +118,13 @@ color: black;
 .main_3_1 a{
     
 padding: 10px;
-border-radius: 20px;
-background-color: white;
+/* border-radius: 20px; */
+/* background-color: white; */
 color: black;
 text-decoration: none;
-border: 1px solid black;
-
+border-bottom: 2px solid black;
+transition: all 0.5s ease;
+}
+.main_3_1 a:hover{
+    color: red;
 }
