--- a/css/media.css
+++ b/css/media.css
@@ -1,31 +1,37 @@
-@media(max-width:1000px)
-{
-    .main{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        align-items: center;
-        width: 100%;
-    }
-    .main_1_1{
-        width: 100%;
-        align-self: center;
-    
-    }
-    .main_1_1 img{
-        width: 100%;
-        padding: 0px 80px 0px 80px ;
-        margin: 0%;
-    }
-    .main_1_2{
-        width: 80%;
-        align-self: center;
 
-
-    }
+@media(max-width:550px){
+.footer hr{
+    display: block;
+    margin: 50px;
+    width: 100%;
 }
-
+    .Footer_c_1{
+width: 100%;
+padding: 50px;
+text-align: center;
+}
+.foot_logo{
+align-items: center;
+margin: auto;
+display: flex;
+justify-content: center;
+/* background-color: aqua; */
+}
+.Footer_c_1_3{
+display: flex;
+justify-content: center;
+text-align: center;
+align-items: center;
+}
+.Footer_c_2{
+    width: 100%;
+    }
+    .Footer_c_3{
+        width: 100%;
+        padding: 50px;
+        text-align: center;
+        }
+}
 @media(max-width:716px)
 {
     .main_2 hr{
@@ -61,4 +67,31 @@ margin-top: 50px;
 transition: all 2s ease;
 
 }
+}
+@media(max-width:1000px)
+{
+    .main{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        width: 100%;
+    }
+    .main_1_1{
+        width: 100%;
+        align-self: center;
+    
+    }
+    .main_1_1 img{
+        width: 100%;
+        padding: 0px 80px 0px 80px ;
+        margin: 0%;
+    }
+    .main_1_2{
+        width: 80%;
+        align-self: center;
+
+
+    }
 }
